# vibes-tracker

./: .coverage  .gitignore  API_COSTS_EXPLAINED.md  API_OPTIMIZATION_SUMMARY.md  CHANGELOG.md  Claude.md  DATA_PIPELINE_OVERVIEW.md  HISTORICAL_COLLECTION_GUIDE.md  QUOTA_FREE_VS_API_COMPARISON.md  README.md  audit_report.md  clusters.json  environment.yml  plan.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.claude/commands/: testit.md
.gemini/: README.md
.gemini/commands/: health.md  testit.md
config/: clusters.json  clusters.json.backup  pipeline_config.yaml  prompts.yaml
docs/: GETTING_STARTED.md  MIGRATION_GUIDE.md  MULTI_YEAR_ANALYSIS_GUIDE.md  RETROACTIVE_SEARCH.md  TECHNICAL_GUIDE.md
docs/reports/: documentation-update.md  implementation-summary.md  wordclouds-and-multiyear.md
gui/: app.py
results/: phase3-test-report.md
results/phase2-test/: PHASE2_RESULTS_SUMMARY.md  cross_cluster_report.json  temporal_report.json
scripts/: collect_historical_data.py  create_sample_data.py  export_transcripts.py  generate_theme_wordclouds.py  incremental_historical_collection.py  quota_free_collection.py  retroactive_search.py  setup_daily_collection.sh  verify_rate_limiting.py
src/: Claude.md  analyze.py  cross_cluster_analysis.py  daily_report.py  ingest.py  main.py  temporal_analysis.py  title_word_cloud.py  visualize.py
src/utils/: __init__.py  cache_manager.py  config_loader.py  logger.py  metadata_manager.py  rate_limiter.py
src/vibes_tracker/: __init__.py  __version__.py  cli.py
tests/: test_quota_and_caching.py
(+20 files in other folders)
