[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibes-tracker"
version = "1.0.0"
description = "Track and analyze content patterns across YouTube channels over time"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client==2.187.0",
    "youtube-transcript-api==1.2.3",
    "pandas==2.3.3",
    "python-dotenv==1.2.1",
    "matplotlib==3.10.8",
    "wordcloud==1.9.4",
    "PyYAML==6.0.3",
    "pydantic==2.12.5",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "langchain-google-genai==4.0.0",
    "chromadb==1.3.7",
    "google-genai==1.55.0",
    "tenacity==9.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
vibes-tracker = "vibes_tracker.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["vibes_tracker*"]
